snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.130540-1.pom.md5
c0801b64aeeb15f9d44e5b9e70e8e3bd